--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5000
 MONGO_URI=mongodb+srv://leonardfiguera:Angelina.1600@cluster0.zyslz18.mongodb.net/taskmanager?retryWrites=true&w=majority
-JWT_SECRET=TU_JWT_SECRET
+JWT_SECRET=leonardfiguera.1600
 
 
 
