--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "nodemon src/index.js",  // Solo para desarrollo (local)
+    "start": "node src/index.js"   // Solo para producción (Render)
   },
   "keywords": [],
   "author": "",
@@ -23,4 +23,5 @@
     "nodemon": "^3.1.11"
   }
 }
+
 
