--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "dev": "node src/index.js",  // Usamos node en lugar de nodemon para producción
-    "start": "node src/index.js"  // Asegúrate de que "start" también esté configurado con node
+    "dev": "node src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +18,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
-    "nodemon": "^3.1.11"  // Mover nodemon al final de las dependencias
-  },
-  "devDependencies": {}
+    "nodemon": "^3.1.11"
+  }
 }
 
 
